samples/_failures_safe/1761126716_aed667_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cec1a523.c: In function ‘main’:
./samples/SAFE/__tmp_cec1a523.c:155:21: error: ‘add’ undeclared (first use in this function)
  155 |                 if (add
      |                     ^~~
./samples/SAFE/__tmp_cec1a523.c:155:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_cec1a523.c:155:24: error: expected ‘)’ at end of input
  155 |                 if (add
      |                    ~   ^
      |                        )
./samples/SAFE/__tmp_cec1a523.c:155:17: error: expected declaration or statement at end of input
  155 |                 if (add
      |                 ^~
./samples/SAFE/__tmp_cec1a523.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cec1a523.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cec1a523.c:155:17: error: expected declaration or statement at end of input
